# em-path_backend

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: check.yml
alembic/: env.py
alembic/versions/: 2024_02_20_1525-4f15a34a11bd_init_table.py  2024_03_01_2224-e2b74cc89a85_alter_pk_column_name_id.py  2024_03_01_2237-2e499c8c97f2_update_foreign_key.py  2024_03_02_1413-f5e64d66c76c_refresh_token_user_id_on_delete_cascade.py  2024_03_07_1912-c76330b812be_rebuild_tables.py  2024_04_12_2238-e08b0c83c843_rebuild_tables.py  2024_05_11_0253-9fa106d47dcd_fix_created_at_updated_at_field_on_utc_0.py
app/: main.py
app/adapters/: file_client.py  task_manager.py  unit_of_work.py
app/adapters/repo/: base.py  token.py  (+2 more)
app/common/: database.py  exception_handler.py  exceptions.py  settings.py
app/config/: database.py  settings.py
app/core/: database.py  exception_handler.py  exceptions.py  settings.py
app/crud/: base.py  crud_token.py  crud_user.py  crud_verify_code.py
app/dependencies/: auth.py  common.py
app/interfaces/: repo.py  task_manager.py  unit_of_work.py
app/models/: __init__.py  auth.py
app/repo/: base.py  file_client.py  token.py  unit_of_work.py  user.py  verify_code.py
app/routers/: __init__.py
app/schemas/: email.py  token.py  user.py  verify_code.py
app/service/: email.py  mail_send.py  secure.py  token.py  user.py
app/tasks/: celery.py  celery_app.py  tasks.py
app/tests/: conftest.py  mock_tokens.json  mock_users.json  mock_verify_codes.json
app/utils/: render.py
docker/: app.sh
(+24 files in other folders)
