[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "app/tests/*.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]
pythonpath = [".", "app"]
env_files = [".test.env", ".env"]
asyncio_mode = "auto"


[tool.ruff.lint]
select = ["E", "F", 'I']

[tool.poetry]
name = "em-path-backend"
version = "0.1.0"
description = ""
authors = ["nuris <ntasbolatov03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
pillow = "^10.3.0"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
psycopg = "^3.1.18"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
bcrypt = "^4.1.2"
cryptography = {extras = ["bcrypt"], version = "^42.0.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
